[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/tools/viewmodel_editor_3rd_person.gd" id="1"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.15, 0.15, 0.2, 1)
ambient_light_source = 2
ambient_light_color = Color(0.5, 0.5, 0.5, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
radius = 0.3
height = 1.4

[sub_resource type="SphereMesh" id="SphereMesh_1"]
radius = 0.2
height = 0.4

[sub_resource type="SphereMesh" id="SphereMesh_2"]
radius = 0.08
height = 0.16

[sub_resource type="StandardMaterial3D" id="Material_Face"]
albedo_color = Color(1, 0.2, 0.2, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(0.1, 0.05, 0.5)

[sub_resource type="StandardMaterial3D" id="Material_Arrow"]
albedo_color = Color(0.2, 1, 0.2, 1)

[node name="ViewmodelEditor3rdPerson" type="Node3D"]
script = ExtResource("1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.955336, 0.29552, 0, -0.29552, 0.955336, 0, 1.5, 3)
fov = 70.0

[node name="PlayerModel" type="Node3D" parent="."]

[node name="Body" type="MeshInstance3D" parent="PlayerModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_1")

[node name="Head" type="MeshInstance3D" parent="PlayerModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)
mesh = SubResource("SphereMesh_1")

[node name="FaceIndicator" type="MeshInstance3D" parent="PlayerModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, -0.15)
mesh = SubResource("SphereMesh_2")
material_override = SubResource("Material_Face")

[node name="FrontArrow" type="MeshInstance3D" parent="PlayerModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -0.8)
mesh = SubResource("BoxMesh_1")
material_override = SubResource("Material_Arrow")

[node name="FrontLabel" type="Label3D" parent="PlayerModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, -1.0)
text = "FRONT"
font_size = 48

[node name="BackLabel" type="Label3D" parent="PlayerModel"]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 0.3, 1.0)
text = "BACK"
font_size = 48

[node name="WeaponAttachment" type="Node3D" parent="PlayerModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0.8, -0.1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 3, 0)
light_energy = 1.2

[node name="FillLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0, -1, 2)
light_energy = 0.4

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 0.1, 0, 0, 0, 5, 0, 0, 0)
mesh = SubResource("CapsuleMesh_1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WeaponSelector" type="OptionButton" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 310.0
offset_right = 250.0
offset_bottom = 340.0

[node name="PositionPanel" type="PanelContainer" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 200.0

[node name="PositionLabel" type="Label" parent="CanvasLayer/PositionPanel"]
layout_mode = 2
text = "3RD PERSON EDITOR

Position:
Vector3(0.000, 0.000, 0.000)

Rotation:
Vector3(0.0, 0.0, 0.0)

Scale:
Vector3(1.00, 1.00, 1.00)"

[node name="InstructionsPanel" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -260.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 340.0
grow_horizontal = 0

[node name="InstructionsLabel" type="Label" parent="CanvasLayer/InstructionsPanel"]
layout_mode = 2
text = "3RD PERSON EDITOR

WASD - Move
Q/E - Up/Down
Arrows - Rotate
+/- - Scale

CAMERA:
Right-drag - Orbit
Scroll - Zoom

Space - Test swing
Shift - Fine
R - Reset
C - Copy"

[node name="CopyButton" type="Button" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 350.0
offset_right = 250.0
offset_bottom = 390.0
text = "COPY VALUES TO CLIPBOARD"

[node name="CopyFeedback" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 14
text = "COPIED!"
horizontal_alignment = 1
vertical_alignment = 1
visible = false
